--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - artifactory_data:/var/opt/jfrog/artifactory
       # - /etc/localtime:/etc/localtime:ro
-    restart: on-failure
+    restart: unless-stopped
     networks:
       - artifactory
     logging:
@@ -37,6 +37,7 @@ services:
     container_name: artifactory-oss-nginx_${ARTIFACTORY_VERSION}
     depends_on:
       - artifactory
+    restart: unless-stopped
     network_mode: service:artifactory
     volumes:
       - nginx_data:/var/opt/jfrog/nginx
@@ -70,6 +71,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       # - /etc/localtime:/etc/localtime:ro
+    restart: unless-stopped
     networks:
       - artifactory
     logging:
